--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     </div><!-- End Interests -->
 
     <!-- ======= Testimonials ======= -->
-    <div class="testimonials container">
+    <div hidden class="testimonials container">
 
       <div class="section-title">
         <h2>Testimonials</h2>
@@ -1086,7 +1086,7 @@
               <p>I created these for my students in grade 1. I took board maker training.</p>
               <div class="portfolio-links">
                 <a href="assets/img/task/sh.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="I created these for my students in grade 1. I took board maker training."><i class="bx bx-plus"></i></a>
-                <a hidden href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+
               </div>
             </div>
           </div>
