--- a/index.html
+++ b/index.html
@@ -85,19 +85,14 @@
           </p>
           <div class="row">
             <div class="col-lg-6">
-              <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
+              <ul hidden>
                 <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.sheridancollege.ca</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 905-845-9430</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Mississauga, ON L5B 0G5, Canada</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Diploma</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>rosemary.didiano@yahoo.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
               </ul>
             </div>
           </div>
