--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="mailto:rosemary.didiano@yahoo.com" class="email"><i class="bi bi-envelope-fill"></i></a>
-        <a href="https://facebook.com/rosemary.didiano" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="https://instagram.com/rosemary.didiano" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://linkedin.com/in/rosemary-didiano-20723918" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a target="_blank" href="mailto:rosemary.didiano@yahoo.com" class="email"><i class="bi bi-envelope-fill"></i></a>
+        <a target="_blank" href="https://web.facebook.com/rosemary.didiano" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a target="_blank" href="https://www.instagram.com/rosemary_didiano/?hl=en" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a target="_blank" href="https://linkedin.com/in/rosemary-didiano-20723918" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -1160,24 +1160,16 @@
 
       <div class="row mt-2">
 
-        <div class="col-md-6 d-flex align-items-stretch">
-          <div class="info-box">
-            <i class="bx bx-map"></i>
-            <h3>My Address</h3>
-            <p>A108 Adam Street, New York, NY 535022</p>
-          </div>
-        </div>
-
         <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a target="_blank" href="https://x.com/didianorosemary" class="twitter"><i class="bi bi-twitter"></i></a>
+              <a target="_blank" href="https://web.facebook.com/rosemary.didiano" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a target="_blank" href="https://www.instagram.com/rosemary_didiano/?hl=en" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a target="_blank" hidden href="#" class="google-plus"><i class="bi bi-skype"></i></a>
+              <a target="_blank" href="https://linkedin.com/in/rosemary-didiano-20723918" class="linkedin"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
@@ -1187,13 +1179,6 @@
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
             <p>rosemary.didiano@yahoo.com</p>
-          </div>
-        </div>
-        <div class="col-md-6 mt-4 d-flex align-items-stretch">
-          <div class="info-box">
-            <i class="bx bx-phone-call"></i>
-            <h3>Call Me</h3>
-            <p>+1 5589 55488 55</p>
           </div>
         </div>
       </div>
