added udl content

--- a/index.html
+++ b/index.html
@@ -1061,69 +1061,13 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/slide.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Google Slide Presentation- Life skills</h4>
-              <p></p>
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/slide.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Google Slide Presentation- Life skills"><i class="bx bx-plus"></i></a>
-                <a href="slide.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Google Slide Presentation- Life skills"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-          <div class="portfolio-wrap">
-            <img src="assets/img/task/sh.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>PECS</h4>
-              <p>I created these for my students in grade 1. I took board maker training.</p>
-              <div class="portfolio-links">
-                <a href="assets/img/task/sh.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="I created these for my students in grade 1. I took board maker training."><i class="bx bx-plus"></i></a>
-
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <div class="portfolio-wrap">
-            <img src="assets/img/task/2724ea_78da546ff5ff42caa693bb7a3f187f1f~mv2.webp" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Visual Stories</h4>
-              <p>I created these for the students in my grade 1 class.</p>
-              <div class="portfolio-links">
-                <a href="assets/img/task/2724ea_78da546ff5ff42caa693bb7a3f187f1f~mv2.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="I created these for the students in my grade 1 class."><i class="bx bx-plus"></i></a>
-                <a href="stories.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-          <div class="portfolio-wrap">
             <img src="assets/img/task/aac.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Communication Board</h4>
-              <p>AAC Communication Board</p>
-              <div class="portfolio-links">
-                <a href="assets/img/task/aac.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="AAC Communication Board!"><i class="bx bx-plus"></i></a>
-                <a href="aac.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="AAC Communication Board!"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-          <div class="portfolio-wrap">
-            <img src="assets/img/task/student-art.jpeg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Inviting & Disinviting Practices</h4>
+              <h4>PowerPoint for AAC</h4>
               <p></p>
               <div class="portfolio-links">
-                <a href="assets/img/task/student-art.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Inviting & Disinviting Practices"><i class="bx bx-plus"></i></a>
-                <a href="practices.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/task/aac.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Powerpoint for AAC"><i class="bx bx-plus"></i></a>
+                <a href="aac.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Powerpoint for AAC"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -1131,18 +1075,73 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/task/ed.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/quizzlet.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>EDTech</h4>
-              <p>EdTech</p>
+              <h4>Quizlet Interactive</h4>
+              <p></p>
               <div class="portfolio-links">
-                <a href="assets/img/task/ed.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="EDTech"><i class="bx bx-plus"></i></a>
-                <a href="https://www.youtube.com/embed/O2oD2atv4T8?si=6mM4n7hAWAxUfPPM&amp;controls=0" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/quizzlet.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Quizlet Interactive"><i class="bx bx-plus"></i></a>
+                <a href="kahoot.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Quizlet Interactive"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/prezi.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Prezi</h4>
+              <p></p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/prezi.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Prezi"><i class="bx bx-plus"></i></a>
+                <a target="_blank" href="https://prezi.com/view/jBPUF3P46zn4XVZ6ZDn9/" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" title="Prezi"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/youtube.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Interactive youtube</h4>
+              <p></p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/youtube.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Interactive youtube"><i class="bx bx-plus"></i></a>
+                <a href="https://youtube.com" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Interactive youtube"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/piktochart.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Piktochart</h4>
+              <p></p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/piktochart.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Piktochart"><i class="bx bx-plus"></i></a>
+                <a href="piktochart.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Piktochart"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/slidespeak.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Piktochart</h4>
+              <p></p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/slidespeak.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="SlideSpeak"><i class="bx bx-plus"></i></a>
+                <a href="https://app.slidespeak.co/presentation/clzj7snsq002ms6fxc2vf4ffy/share" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="SlideSpeak"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
     </div>
