fixed accessibility overview content

--- a/index.html
+++ b/index.html
@@ -987,14 +987,14 @@
           <div class="feature-box">
             <h4>Screen Reader Support</h4>
             <p>
-              Our ePortfolio supports screen readers, ensuring that visually impaired users can access all content through text-to-speech technology.
+              This portfolio supports screen readers, ensuring that visually impaired users can access all content through text-to-speech technology.
               This feature is crucial as it allows these users to navigate the site, read text, and understand the context of images and multimedia.
             </p>
           </div>
           <div class="feature-box">
             <h4>Keyboard Navigation</h4>
             <p>
-              We have implemented comprehensive keyboard navigation, allowing users with motor impairments to use keyboard shortcuts for navigating
+              I have implemented comprehensive keyboard navigation, allowing users with motor impairments to use keyboard shortcuts for navigating
               through the site. This feature is valuable as it enhances usability and accessibility for users who cannot operate a mouse.
             </p>
           </div>
@@ -1008,7 +1008,7 @@
           <div class="feature-box">
             <h4>High Contrast Mode</h4>
             <p>
-              Our ePortfolio offers a high contrast mode, which enhances the contrast of text and background colors. This feature is designed to aid
+              This ePortfolio offers a high contrast mode, which enhances the contrast of text and background colors. This feature is designed to aid
               users with low vision or color blindness, making text easier to read and the site more accessible.
             </p>
           </div>
@@ -1031,7 +1031,7 @@
           <div class="feature-box">
             <h4>Multimedia Accessibility</h4>
             <p>
-              Our multimedia content, including videos and infographics, is designed to be accessible. We ensure that multimedia elements are
+              The multimedia content, including videos and infographics, is designed to be accessible. I ensure that multimedia elements are
               accompanied by alternative formats and descriptions, making them accessible to all users, including those with disabilities.
             </p>
           </div>
