--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a target="_blank" href="mailto:rosemary.didiano@yahoo.com" class="email"><i class="bi bi-envelope-fill"></i></a>
+        <a target="_blank" href="mailto:didianor@sheridancollege.ca" class="email"><i class="bi bi-envelope-fill"></i></a>
         <a target="_blank" href="https://web.facebook.com/rosemary.didiano" class="facebook"><i class="bi bi-facebook"></i></a>
         <a target="_blank" href="https://www.instagram.com/rosemary_didiano/?hl=en" class="instagram"><i class="bi bi-instagram"></i></a>
         <a target="_blank" href="https://linkedin.com/in/rosemary-didiano-20723918" class="linkedin"><i class="bi bi-linkedin"></i></a>
@@ -92,7 +92,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Diploma</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>rosemary.didiano@yahoo.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>didianor@sheridancollege.ca</span></li>
               </ul>
             </div>
           </div>
@@ -1177,7 +1177,7 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>rosemary.didiano@yahoo.com</p>
+            <p>didianor@sheridancollege.ca</p>
           </div>
         </div>
       </div>
