--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,7 @@
               <p></p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/youtube.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Interactive youtube"><i class="bx bx-plus"></i></a>
-                <a href="https://youtube.com" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Interactive youtube"><i class="bx bx-link"></i></a>
+                <a href="youtube.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Interactive youtube"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
