added linkedin, pinterest to AT Exhibit

--- a/index.html
+++ b/index.html
@@ -763,13 +763,13 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/voiceover.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/linkedin.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>VoiceOver (macOS and iOS)</h4>
+              <h4>LinkedIn</h4>
               <p>Screen Reader</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/voiceover.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="VoiceOver (macOS and iOS)"><i class="bx bx-plus"></i></a>
-
+                <a href="assets/img/portfolio/linkedin.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="linkedin"><i class="bx bx-plus"></i></a>
+                <a href="https://linkedin.com/in/rosemary-didiano-20723918" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" title="linkedin"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -777,13 +777,13 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-card">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/dictation.jpeg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/pinterest.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Apple's Dictation</h4>
+              <h4>Pinterest</h4>
               <p>Speech-to-Text</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/dictation.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Apple's Dictation"><i class="bx bx-plus"></i></a>
-
+                <a href="assets/img/portfolio/pinterest.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="pinterest"><i class="bx bx-plus"></i></a>
+                <a href="https://in.pinterest.com/didiano0449/" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" title="pinterest"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
